manifests/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1 Ingress
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: alertmanager.192.168.1.15.nip.io
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: web
        path: /
  tls:
  - hosts:
    - alertmanager.192.168.1.15.nip.io
