manifests/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1 Ingress
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
  - host: grafana.192.168.1.15.nip.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
        path: /
  tls:
  - hosts:
    - grafana.192.168.1.15.nip.io
