manifests/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1 Ingress
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginxspec:
  rules:
  - host: prometheus.192.168.1.15.nip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /
  tls:
  - hosts:
    - prometheus.192.168.1.15.nip.io
